bumped versions of many components, added a few dependencies